--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: ''
 keywords: null
 author: M
 language: en
-timezone: ''
+timezone: Asia/Shanghai
 url: https://waterye.github.io
 permalink: ':year/:month/:day/:title/'
 permalink_defaults: null
